--- a/Project/View/ActivityCollectionViewCell.xib
+++ b/Project/View/ActivityCollectionViewCell.xib
@@ -12,10 +12,10 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="activityCell" id="gTV-IL-0wX" customClass="ActivityCollectionViewCell" customModule="Project" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="190" height="219"/>
+            <rect key="frame" x="0.0" y="0.0" width="190" height="214"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="190" height="219"/>
+                <rect key="frame" x="0.0" y="0.0" width="190" height="214"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="emh-Iy-rWf">
@@ -32,7 +32,7 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Price: $52 / person" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hPt-PB-73k">
-                        <rect key="frame" x="20" y="165" width="150" height="21"/>
+                        <rect key="frame" x="20" y="146" width="150" height="21"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <nil key="textColor"/>
@@ -42,11 +42,13 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-            <size key="customSize" width="190" height="219"/>
+            <size key="customSize" width="190" height="214"/>
             <connections>
                 <outlet property="imageView" destination="emh-Iy-rWf" id="G62-mO-G1d"/>
+                <outlet property="name" destination="TKF-ui-2hc" id="XNU-Qd-afK"/>
+                <outlet property="price" destination="hPt-PB-73k" id="bIW-y3-aGK"/>
             </connections>
-            <point key="canvasLocation" x="233.33333333333334" y="162.38839285714286"/>
+            <point key="canvasLocation" x="233.33333333333334" y="160.71428571428569"/>
         </collectionViewCell>
     </objects>
     <resources>
